Connected buttons and fixed Nav collapse
All the buttons are now connected so they launch the default email software when pressed.

The navbar collapse now works as intended.

--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 }
 
 
-h2 {
+
+h2,
+p {
     font-size: 1rem;
 }
 
